test/Common/LinkerScriptParsing/Errors/Sections/SortPolicy/Inputs/script.t
SECTIONS {
  FOO : { *(SORT_BY_NAME(SORT_BY_INIT_PRIORITY(*foo*))) }
}
